# judger

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  config.ini
docker/: Dockerfile  builddocker.sh  rundocker.sh
src/: Config.cpp  Config.h  DatabaseHandler.cpp  DatabaseHandler.h  Exception.h  RunResult.cpp  RunResult.h  Runner.cpp  Runner.h  Submit.cpp  Submit.h  Utils.cpp  Utils.h  main.cpp
